<?xml version="1.0" encoding="utf-8"?><!--
 * Copyright (C) 2019 Dominik Nakamura
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">BeatFly</string>
    <string name="action_logout">Logout</string>
    <string name="action_about">About</string>
    <string name="action_request">Request</string>
    <string name="action_review">Review</string>

    <string name="activity_title_about">About</string>

    <string name="nav_label_about">About</string>
    <string name="nav_label_oss_licenses">OSS Licenses</string>
    <string name="nav_label_music_licenses">Music Licenses</string>
    <string name="nav_label_mod_licenses">Moderator Licenses</string>

    <string name="main_tab_header_song">Song</string>
    <string name="main_tab_header_history">History</string>
    <string name="main_tab_header_moderators">Mods</string>
    <string name="main_tab_header_reviews">Reviews</string>

    <string name="about_oss_licenses">Software licenses</string>
    <string name="about_music_licenses">Music licenses</string>
    <string name="about_mod_licenses">Moderator licenses</string>

    <string name="content_desc_album_cover">Album cover</string>
    <string name="content_desc_mod_picture">Moderator picture</string>
    <string name="content_desc_mod_rating">Moderator rating</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_username_blank">Username missing</string>
    <string name="login_password_blank">Password missing</string>
    <string name="login_mismatch">Username &amp; password invalid</string>

    <string name="request_header">Wish a song</string>
    <string name="request_song_hint">Song</string>
    <string name="request_artist_hint">Artist</string>
    <string name="request_submit">Submit</string>
    <string name="request_song_blank">Song title missing</string>
    <string name="request_artist_blank">Artist name missing</string>
    <string name="request_submitted">Song wish submitted</string>

    <string name="review_header_playlist">Review playlist</string>
    <string name="review_header_moderator">Review moderator</string>
    <string name="review_message_hint">Message</string>
    <string name="review_submit">Submit</string>
    <string name="review_message_blank">Message missing</string>
    <string name="review_submitted">Review submitted</string>

    <string name="notification_play">Play</string>
    <string name="notification_pause">Pause</string>
    <string name="notification_stop">Stop</string>
    <string name="notification_channel">Radio Player</string>

    <string name="song_duration">%1$d:%2$02d.%3$03d</string>

    <string name="mod_rating">%1$.1f (%2$d)</string>

    <string name="song_license_name">&lt;a href=\"%1$s\">%2$s&lt;/a></string>
    <string name="song_license_artist">Song by &lt;a href=\"%1$s\">%2$s&lt;/a> on &lt;a href=\"%3$s\">%4$s&lt;/a></string>
    <string name="song_license_cover">Cover by &lt;a href=\"%1$s\">%2$s&lt;/a> on &lt;a href=\"%3$s\">%4$s&lt;/a></string>

    <string name="mod_license_picture">Picture by &lt;a href=\"%1$s\">%2$s&lt;/a> on &lt;a href=\"%3$s\">%4$s&lt;/a></string>
</resources>
