<?xml version="1.0" encoding="utf-8"?><!--
 * Copyright (C) 2019 Dominik Nakamura
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_etc"
    app:startDestination="@id/aboutFragment">

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.github.dnaka91.beatfly.fragment.AboutFragment"
        android:label="@string/nav_label_about"
        tools:layout="@layout/about_fragment">
        <action
            android:id="@+id/action_oss_licenses"
            app:destination="@id/ossLicensesMenuActivity" />
        <action
            android:id="@+id/action_music_licenses"
            app:destination="@id/songLicenseListFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_mod_licenses"
            app:destination="@id/moderatorLicenseListFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/songLicenseListFragment"
        android:name="com.github.dnaka91.beatfly.fragment.SongLicenseListFragment"
        android:label="@string/nav_label_music_licenses"
        tools:layout="@layout/song_license_list_fragment" />

    <fragment
        android:id="@+id/moderatorLicenseListFragment"
        android:name="com.github.dnaka91.beatfly.fragment.ModeratorLicenseListFragment"
        android:label="@string/nav_label_mod_licenses"
        tools:layout="@layout/moderator_license_list_fragment" />

    <activity
        android:id="@+id/ossLicensesMenuActivity"
        android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
        android:label="@string/nav_label_oss_licenses" />

</navigation>